--- a/inst/htmlwidgets/lib/styles/styles.css
+++ b/inst/htmlwidgets/lib/styles/styles.css
@@ -1,4 +1,4 @@
-.DiagrammeR pre {
+.DiagrammeR,.grViz pre {
   white-space: pre-wrap;       /* CSS 3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
